[tool.poetry]
name = "distributed-game"
version = "0.1.0"
packages = [
    { include = "engine" },
    { include = "wa_viz" }
]
description = ""
authors = ["Eugene Bikkinin <xnegxneg@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pywebcanvas = "^0.3.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
